# fakevine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Caddyfile  Dockerfile  Dockerfile.caddy  Dockerfile.dev  README.md  defaults.toml  docker-compose.caddy.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  renovate.json
.github/: copilot-instructions.md
.github/workflows/: docker-build-branch.yml  docker-build.yml  release-please.yml  test.yml
src/fakevine/: __init__.py  app.py  config.py  cvapp.py  cvrouter.py
src/fakevine/models/: cvapimodels.py  cvdbmodels.py  helpers.py  localcvdbmodels.py
src/fakevine/trunks/: __init__.py  comic_trunk.py  localcvdb_trunk.py  simple_cache_trunk.py  static_db_trunk.py
src/fakevine/utils/: README.md  __init__.py  console.py  cvstatic.py  dbconverter.py  utilsapp.py
tests/: test_cvapimodels.py  test_cvapp.py  test_cvrouter.py  test_fakevine.py
tests/locust_tests/: locust.conf  locustfile.py
