[project]
name = "FakeVine"
version = "0.2.0"
description = "A ComicVine API compatible FastAPI router"
readme = "README.md"
authors = [
    { name = "falo2k", email = "1392563+falo2k@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiohttp-client-cache[sqlite]>=0.14.3",
    "aiosqlite>=0.22.1",
    "dynaconf>=3.2.13",
    "fastapi>=0.134.0",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "sqlalchemy[asyncio]>=2.1.0b1",
    "typer>=0.24.1",
    "types-lxml>=2026.2.16",
    "uvicorn>=0.41.0",
]

[project.scripts]
fakevine = "fakevine.app:main"
fakevine-utils = "fakevine.utils.utilsapp:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mockito>=0.0.6.post1",
]

lint = [
    "ruff>=0.9.0",
]

git = [
    "commitizen",
]

dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "git" },
    "debugpy>=1.8.20",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["ALL"]
ignore = ["Q000","D100"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
addopts = "--no-header --tb=short -rfExXs"
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
